--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/yaml-front-matter": "^4.1.0",
+    "marked": "^4.0.18",
+    "yaml-front-matter": "^4.1.1"
+  }
 }
